--- a/men.html
+++ b/men.html
@@ -49,7 +49,7 @@
 
     <!-- Product 1 -->
     <div class="product">
-      <img src="images/men1.jpg" alt="Classic Loafers">
+      <img src="./images/men1.jpg" alt="Classic Loafers">
       <h3>Classic Loafers</h3>
       <p class="tagline">Timeless elegance for every occasion</p>
       <p class="price"><span class="old-price">$150</span> $120</p>
