--- a/men.html
+++ b/men.html
@@ -184,8 +184,8 @@
     <div class="footer-box">
       <h3>Quick Links</h3>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="ABOUT.html">About</a>
+      <a href="Contact.html">Contact</a>
     </div>
     <div class="footer-box">
       <h3>Contact</h3>
