--- a/women.html
+++ b/women.html
@@ -27,8 +27,8 @@
       </ul>
     </li>
 
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="ABOUT.html">About</a></li>
+    <li><a href="Contact.html">Contact</a></li>
     <li><a href="cart.html">Cart</a></li>
 
     <li class="auth-buttons">
@@ -140,8 +140,8 @@
     <div class="footer-box">
       <h3>Quick Links</h3>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="ABOUT.html">About</a>
+      <a href="Contact.html">Contact</a>
     </div>
     <div class="footer-box">
       <h3>Contact</h3>
