Restore ABOUT.html with original content
Restored the ABOUT.html file with the original content, including styling and structure for the MySite Footwear e-commerce platform.

--- a/ABOUT.html
+++ b/ABOUT.html
@@ -163,8 +163,8 @@ footer span{
         <li><a href="children.html">Kids</a></li>
       </ul>
     </li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="ABOUT.html">About</a></li>
+    <li><a href="Contact.html">Contact</a></li>
     <li><a href="cart.html">Cart</a></li>
     <li class="auth-buttons">
       <a href="login.html" class="login-btn">Login</a>
@@ -264,8 +264,8 @@ footer span{
     <div class="footer-box">
       <h3>Quick Links</h3>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="ABOUT.html">About</a>
+      <a href="Contact.html">Contact</a>
     </div>
 
     <div class="footer-box">
@@ -284,3 +284,4 @@ footer span{
 
 </body>
 </html>
+
