Update links to About and Contact pages

--- a/cart.html
+++ b/cart.html
@@ -37,8 +37,8 @@
             </ul>
           </li>
       
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="ABOUT.html">About</a></li>
+          <li><a href="Contact.html">Contact</a></li>
           <li><a href="cart.html">Cart</a></li>
       
           <li class="auth-buttons">
