Update image paths for men's products

--- a/men.html
+++ b/men.html
@@ -89,7 +89,7 @@
 
     <!-- Product 3 -->
     <div class="product">
-      <img src="images/men3.avif" alt="Leather Boots">
+      <img src="aict_project /images/men3.avif" alt="Leather Boots">
       <h3>Leather Boots</h3>
       <p class="tagline">Rugged & stylish for winters</p>
       <p class="price"><span class="old-price">$180</span> $150</p>
@@ -109,7 +109,7 @@
 
     <!-- Product 4 -->
     <div class="product">
-      <img src="images/men4.jpg" alt="Formal Shoes">
+      <img src="aict_project /images/men4.jpg" alt="Formal Shoes">
       <h3>Formal Shoes</h3>
       <p class="tagline">Perfect for office & events</p>
       <p class="price"><span class="old-price">$140</span> $110</p>
@@ -132,7 +132,7 @@
 
       <!-- Product 5 -->
       <div class="product">
-        <img src="images/men5.webp" alt="Formal Shoes">
+        <img src="aict_project /images/men5.webp" alt="Formal Shoes">
         <h3> Sleek Peshawari Sandals </h3>
         <p class="tagline">Perfect for GYM & Walking</p>
         <p class="price"><span class="old-price">$140</span> $110</p>
@@ -153,7 +153,7 @@
 
  <!-- Product 6 -->
  <div class="product">
-    <img src="images/men6.jpeg" alt="Formal Shoes">
+    <img src="aict_project /images/men6.jpeg" alt="Formal Shoes">
     <h3>Leather Sandal</h3>
     <p class="tagline">Perfect for office & events</p>
     <p class="price"><span class="old-price">$140</span> $110</p>
