--- a/women.html
+++ b/women.html
@@ -49,7 +49,7 @@
 
     <!-- Product 1 -->
     <div class="product">
-      <img src="images/women1.webp" alt="Elegant Heels">
+      <img src="aict_project /images/women1.webp" alt="Elegant Heels">
       <h3>Elegant Heels</h3>
       <p class="tagline">Chic design for every occasion</p>
       <p class="price"><span class="old-price">$120</span> $95</p>
@@ -69,7 +69,7 @@
 
     <!-- Product 2 -->
     <div class="product">
-      <img src="images/women2.webp" alt="Casual Flats">
+      <img src="aict_project /images/women2.webp" alt="Casual Flats">
       <h3>Casual Flats</h3>
       <p class="tagline">Comfortable everyday wear</p>
       <p class="price"><span class="old-price">$80</span> $60</p>
@@ -89,7 +89,7 @@
 
     <!-- Product 3 -->
     <div class="product">
-      <img src="images/women3.webp" alt="Sneakers">
+      <img src="aict_project /images/women3.webp" alt="Sneakers">
       <h3>Sporty Sneakers</h3>
       <p class="tagline">Active style & support</p>
       <p class="price"><span class="old-price">$100</span> $80</p>
@@ -109,7 +109,7 @@
 
     <!-- Product 4 -->
     <div class="product">
-      <img src="images/women4.webp" alt="Ankle Boots">
+      <img src="aict_project /images/women4.webp" alt="Ankle Boots">
       <h3>Ankle Boots</h3>
       <p class="tagline">Trendy boots for daily wear</p>
       <p class="price"><span class="old-price">$130</span> $105</p>
