Update image paths for product images

--- a/children.html
+++ b/children.html
@@ -49,7 +49,7 @@
 
     <!-- Product 1 -->
     <div class="product">
-      <img src="images/kid1.webp" alt="Play Sneakers">
+      <img src="aict_project /images/kid1.webp" alt="Play Sneakers">
       <h3>Play Sneakers</h3>
       <p class="tagline">Durable comfort for little explorers</p>
       <p class="price"><span class="old-price">$80</span> $55</p>
@@ -69,7 +69,7 @@
 
     <!-- Product 2 -->
     <div class="product">
-      <img src="images/kid2.webp" alt="Sport Sandals">
+      <img src="aict_project /images/kid2.webp" alt="Sport Sandals">
       <h3>Sport Sandals</h3>
       <p class="tagline">Lightweight & breathable</p>
       <p class="price"><span class="old-price">$60</span> $42</p>
@@ -89,7 +89,7 @@
 
     <!-- Product 3 -->
     <div class="product">
-      <img src="images/kid3.webp" alt="Colorful Trainers">
+      <img src="aict_project /images/kid3.webp" alt="Colorful Trainers">
       <h3>Colorful Trainers</h3>
       <p class="tagline">Bright designs for playful energy</p>
       <p class="price"><span class="old-price">$70</span> $50</p>
@@ -109,7 +109,7 @@
 
     <!-- Product 4 -->
     <div class="product">
-      <img src="images/kid4.webp" alt="School Shoes">
+      <img src="aict_project /images/kid4.webp" alt="School Shoes">
       <h3>School Shoes</h3>
       <p class="tagline">Smart and sturdy for daily wear</p>
       <p class="price"><span class="old-price">$90</span> $65</p>
