--- a/men.html
+++ b/men.html
@@ -69,7 +69,7 @@
 
     <!-- Product 2 -->
     <div class="product">
-      <img src="images/men.jpg" alt="Sport Sneakers">
+      <img src="aict_project /images/men.jpg" alt="Sport Sneakers">
       <h3>Sport Sneakers</h3>
       <p class="tagline">Active style & comfort</p>
       <p class="price"><span class="old-price">$130</span> $100</p>
