--- a/men.html
+++ b/men.html
@@ -64,7 +64,7 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Classic Loafers', 120, 'images/men1.jpg', document.getElementById('size1').value)" class="btn-primary">👞 Add to My Bag</button>
+      <button onclick="addToCart('Classic Loafers', 120, 'aict_project /men1.jpg', document.getElementById('size1').value)" class="btn-primary">👞 Add to My Bag</button>
     </div>
 
     <!-- Product 2 -->
@@ -84,7 +84,7 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Sport Sneakers', 100, 'images/men.jpg', document.getElementById('size2').value)" class="btn-primary">👟 Add to My Bag</button>
+      <button onclick="addToCart('Sport Sneakers', 100, 'aict_project /men.jpg', document.getElementById('size2').value)" class="btn-primary">👟 Add to My Bag</button>
     </div>
 
     <!-- Product 3 -->
@@ -104,7 +104,7 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Leather Boots', 150, 'images/men3.avif', document.getElementById('size3').value)" class="btn-primary">👢 Add to My Bag</button>
+      <button onclick="addToCart('Leather Boots', 150, 'aict_project /men3.avif', document.getElementById('size3').value)" class="btn-primary">👢 Add to My Bag</button>
     </div>
 
     <!-- Product 4 -->
@@ -124,7 +124,7 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Formal Shoes', 110, 'images/men4.jpg', document.getElementById('size4').value)" class="btn-primary">👞 Add to My Bag</button>
+      <button onclick="addToCart('Formal Shoes', 110, 'aict_project /men4.jpg', document.getElementById('size4').value)" class="btn-primary">👞 Add to My Bag</button>
     </div>
 
 
@@ -147,7 +147,7 @@
           <option value="11">11</option>
         </select>   
   
-        <button onclick="addToCart('Sleek Peshawari Sandals ', 120, 'images/men5.webp', document.getElementById('size5').value)" class="btn-primary">👞 Add to My Bag</button>
+        <button onclick="addToCart('Sleek Peshawari Sandals ', 120, 'aict_project /men5.webp', document.getElementById('size5').value)" class="btn-primary">👞 Add to My Bag</button>
       </div>
 
 
@@ -168,7 +168,7 @@
       <option value="11">11</option>
     </select>   
 
-    <button onclick="addToCart('Leather Sandal', 120, 'images/men6.jpeg', document.getElementById('size6').value)" class="btn-primary">👞 Add to My Bag</button>
+    <button onclick="addToCart('Leather Sandal', 120, 'aict_project /men6.jpeg', document.getElementById('size6').value)" class="btn-primary">👞 Add to My Bag</button>
   </div>
 
   </div>
