--- a/men.html
+++ b/men.html
@@ -49,7 +49,7 @@
 
     <!-- Product 1 -->
     <div class="product">
-      <img src="aict_project/images/men1.jpg" alt="Classic Loafers">
+      <img src="aict_project /images/men1.jpg" alt="Classic Loafers">
       <h3>Classic Loafers</h3>
       <p class="tagline">Timeless elegance for every occasion</p>
       <p class="price"><span class="old-price">$150</span> $120</p>
@@ -64,7 +64,7 @@
         <option value="11">11</option>
       </select>
 
-      <button   onclick="addToCart('Classic Loafers', 120, 'aict_project/images/men1.jpg', document.getElementById('size1').value)"
+      <button   onclick="addToCart('Classic Loafers', 120, 'aict_project /images/men1.jpg', document.getElementById('size1').value)"
     class="btn-primary">👞 Add to My Bag</button>
     </div>
 
