Update image paths for men's products

--- a/men.html
+++ b/men.html
@@ -85,7 +85,7 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Sport Sneakers', 100, 'aict_project /men.jpg', document.getElementById('size2').value)" class="btn-primary">👟 Add to My Bag</button>
+      <button onclick="addToCart('Sport Sneakers', 100, 'aict_project /images/men.jpg', document.getElementById('size2').value)" class="btn-primary">👟 Add to My Bag</button>
     </div>
 
     <!-- Product 3 -->
@@ -105,7 +105,7 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Leather Boots', 150, 'aict_project /men3.avif', document.getElementById('size3').value)" class="btn-primary">👢 Add to My Bag</button>
+      <button onclick="addToCart('Leather Boots', 150, 'aict_project /images/men3.avif', document.getElementById('size3').value)" class="btn-primary">👢 Add to My Bag</button>
     </div>
 
     <!-- Product 4 -->
@@ -125,7 +125,7 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Formal Shoes', 110, 'aict_project /men4.jpg', document.getElementById('size4').value)" class="btn-primary">👞 Add to My Bag</button>
+      <button onclick="addToCart('Formal Shoes', 110, 'aict_project /images/men4.jpg', document.getElementById('size4').value)" class="btn-primary">👞 Add to My Bag</button>
     </div>
 
 
@@ -148,7 +148,7 @@
           <option value="11">11</option>
         </select>   
   
-        <button onclick="addToCart('Sleek Peshawari Sandals ', 120, 'aict_project /men5.webp', document.getElementById('size5').value)" class="btn-primary">👞 Add to My Bag</button>
+        <button onclick="addToCart('Sleek Peshawari Sandals ', 120, 'aict_project /images/men5.webp', document.getElementById('size5').value)" class="btn-primary">👞 Add to My Bag</button>
       </div>
 
 
@@ -169,7 +169,7 @@
       <option value="11">11</option>
     </select>   
 
-    <button onclick="addToCart('Leather Sandal', 120, 'aict_project /men6.jpeg', document.getElementById('size6').value)" class="btn-primary">👞 Add to My Bag</button>
+    <button onclick="addToCart('Leather Sandal', 120, 'aict_project /images/men6.jpeg', document.getElementById('size6').value)" class="btn-primary">👞 Add to My Bag</button>
   </div>
 
   </div>
