Format button element for better readability

--- a/men.html
+++ b/men.html
@@ -85,7 +85,8 @@
         <option value="11">11</option>
       </select>
 
-      <button onclick="addToCart('Sport Sneakers', 100, 'aict_project /images/men.jpg', document.getElementById('size2').value)" class="btn-primary">👟 Add to My Bag</button>
+      <button onclick="addToCart('Sport Sneakers', 100, 'aict_project /images/men.jpg', document.getElementById('size2').value)" 
+        class="btn-primary">👟 Add to My Bag</button>
     </div>
 
     <!-- Product 3 -->
