--- a/children.html
+++ b/children.html
@@ -64,7 +64,7 @@
         <option value="1">1</option>
       </select>
 
-      <button onclick="addToCart('Play Sneakers', 55, 'images/kid1.webp', document.getElementById('size1').value)" class="btn-primary">Add to Cart</button>
+      <button onclick="addToCart('Play Sneakers', 55, 'aict_project /images/kid1.webp', document.getElementById('size1').value)" class="btn-primary">Add to Cart</button>
     </div>
 
     <!-- Product 2 -->
@@ -84,7 +84,7 @@
         <option value="1">1</option>
       </select>
 
-      <button onclick="addToCart('Sport Sandals', 42, 'images/kid2.webp', document.getElementById('size2').value)" class="btn-primary">Add to Cart</button>
+      <button onclick="addToCart('Sport Sandals', 42, 'aict_project /images/kid2.webp', document.getElementById('size2').value)" class="btn-primary">Add to Cart</button>
     </div>
 
     <!-- Product 3 -->
@@ -104,7 +104,7 @@
         <option value="1">1</option>
       </select>
 
-      <button onclick="addToCart('Colorful Trainers', 50, 'images/kid3.webp', document.getElementById('size3').value)" class="btn-primary">Add to Cart</button>
+      <button onclick="addToCart('Colorful Trainers', 50, 'aict_project /images/kid3.webp', document.getElementById('size3').value)" class="btn-primary">Add to Cart</button>
     </div>
 
     <!-- Product 4 -->
@@ -124,7 +124,7 @@
         <option value="1">1</option>
       </select>
 
-      <button onclick="addToCart('School Shoes', 65, 'images/kid4.webp', document.getElementById('size4').value)" class="btn-primary">Add to Cart</button>
+      <button onclick="addToCart('School Shoes', 65, 'aict_project /images/kid4.webp', document.getElementById('size4').value)" class="btn-primary">Add to Cart</button>
     </div>
 
   </div>
