--- a/Contact.html
+++ b/Contact.html
@@ -283,7 +283,7 @@ button#submitBtn{
       <tr><td>44</td><td>27.8</td></tr>
     </table>
 
-    <img src="images/sizechart.webp">
+    <img src="aict_project /images/sizechart.webp">
 
     <div class="measurement-tips">
       Stand straight, heel against wall, measure longest toe.
